# avanti-bootcamp-cdd

./: README.md  pyproject.toml
notebooks/: 00-data-download.ipynb  01-exploratory_data_analysis.ipynb  02-comparative_analysis.ipynb
